--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <META NAME="Keywords" CONTENT="">
     <META NAME="Description" CONTENT="">
     <link rel="stylesheet" href="Css/font.css">
-    <title>Tìnk iu cụa Anh Tèi</title>
+    <title>Iu em</title>
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 
     <style>
@@ -28,6 +28,6 @@
     <canvas id="pinkboard"></canvas>
         <script src="js/function.js">
         </script>
-        <p class=""> Ai Nớp Du</p>
+        <p class="">Lò vé du <3</p>
 </BODY>
 </HTML>
